--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -2,8 +2,10 @@
 <html>
 	<head>
 		<title>K-12 Teacher Resources</title>
-		<link rel="stylesheet" type="text/css" href="css/style.css"
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
-		<h1>Freebie Corner</h1>
-		<p>Complimentary Lessons and contests for K-12 teachers</p>
+		<h1>Teacher Corner</h1>
+		<p>Complimentary lessons and contests for K-12 teachers</p>
+	</body>
+</html>
