--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -28,26 +28,26 @@
 
 <section>
 	<figure class="features">
-		<img class="images" src="images/apple.jpg" alt="apple" title="k-2 featured">
+		<img class="images" src="images/apple_2.jpg" alt="apple" title="k-2 featured">
 		<figcaption class="gradetitle">K-2 Featured</figcaption><figcaption>The Apple Foundation partnered with us to help you teach key math concepts using apples.</figcaption>
 	</figure>
 
 	<figure class="features">
-		<img class="images" src="images/shrek.jpg" alt="shrek" title="3-5 featured">
+		<img class="images" src="images/coraline_2.jpg" alt="coraline" title="3-5 featured">
 		<figcaption class="gradetitle"> 3-5 Featured</figcaption> 
-		<figcaption>Sony Pictures partnered with us to develop these story-starters inspired by the movie Shrek.</figcaption>
+		<figcaption>Sony Pictures partnered with us to develop these story-starters inspired by the movie Coraline.</figcaption>
 	</figure>
 
 	<figure class="features">
-		<img class="images" src="images/graph.jpg" alt="graph" title="6-8 featured">
+		<img class="images" src="images/graph_2.jpg" alt="graph" title="6-8 featured">
 		<figcaption class="gradetitle">6-8 Featured</figcaption> 
-		<figcaption> We worked with The Actuarial Foundation to develope an interactive math activity that teacher graphing.</figcaption>
+		<figcaption> We worked with The Actuarial Foundation to develop an interactive math activity that teaches graphing.</figcaption>
 	</figure>
 
 	<figure class="features">
-		<img class="images" src="images/environment.jpg" alt="environment" title="9-12 featured">
+		<img class="images" src="images/environment_2.jpg" alt="environment" title="9-12 featured">
 		<figcaption class="gradetitle"> 9-12 Featured</figcaption>
-		<figcaption> The Lexus Eco Challenge asks high schoolers to develop a plan to help protect their environment<figcaption>
+		<figcaption> The Lexus Eco Challenge asks high schoolers to develop a plan to help protect their environment.<figcaption>
 	</figure>
 </section>
 
