--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -5,18 +5,17 @@
 <head>
 	<title>Teacher Corner</title>
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+	<link rel="stylesheet" type="text/css" href="css/reset.css">
 </head>
-
-<div class="wrapper">
 
 <body>
 
-	<header class=clearfix>
+	<header>
 
 		<h1 id="title">Teacher<br>Corner</h1>
 		<!-- content overlaps with padding on top only when eliminate padding-->
 
-		<nav id="gradenav">
+		<nav id="gradenav" class="clearfix">
 			<a href="#">K-2</a>
 			<a href="#">3-5</a>
 			<a href="#">6-8</a>
@@ -24,7 +23,7 @@
 			<a href="#">K-12</a>
 		</nav>
 
-		<nav id="subjectnav">
+		<nav id="subjectnav" class="clearfix">
 			<a href="#">teacher sweeps</a>
 			<a href="#">student contests</a>
 			<a href="#">english</a>
@@ -36,44 +35,45 @@
 		
 	</header>
 
-<section>
+	<section id="two column" class="clearfix">
 
-	<aside>
-		<!-- should this tag be an 'aside' i can't style the original <main> tag should it be under the same section as figure -->
-		<p id="slogan"> Free content for K-12 teachers.</p>
-		<p id="description">We partner with non-profits, corporations and government agencies to develop unique and valuable free content for teachers to use in their classrooms.</p>
-		<p id="list">Send me an email when a new program is is developed.</p>
-	</aside>
+		<main id="right">
+			<!-- should this tag be an 'aside' i can't style the original <main> tag should it be under the same section as figure -->
+			<p id="slogan"> Free content for K-12 teachers.</p>
+			<p id="description">We partner with non-profits, corporations and government agencies to develop unique and valuable free content for teachers to use in their classrooms.</p>
+			<p id="list">Send me an email when a new program is is developed.</p>
+		</main>
 
-	<figure class="features">
-		<img class="images" src="images/apple_2.jpg" alt="apple" title="k-2 featured">
-		<figcaption><span class="gradetitle">K-2 Featured</span> The Apple Foundation partnered with us to help you teach key math concepts using apples.</figcaption>
-	</figure>
 
-	<figure class="features">
-		<img class="images" src="images/coraline_2.jpg" alt="coraline" title="3-5 featured">
-		<figcaption><span class="gradetitle">3-5 Featured</span> Sony Pictures partnered with us to develop these story-starters inspired by the movie Coraline.</figcaption>
-	</figure>
+		<div=id="left">
+			<figure class="features">
+				<img class="images" src="images/apple_2.jpg" alt="apple" title="k-2 featured">
+				<figcaption><span class="gradetitle">K-2 Featured</span> The Apple Foundation partnered with us to help you teach key math concepts using apples.</figcaption>
+			</figure>
 
-	<figure class="features">
-		<img class="images" src="images/graph_2.jpg" alt="graph" title="6-8 featured">
-		<figcaption><span class="gradetitle">6-8 Featured</span> We worked with The Actuarial Foundation to develop an interactive graphing math activity.</figcaption>
-		<!-- fixed box height to fix text, why is there margins between figures-->
-	</figure>
+			<figure class="features">
+				<img class="images" src="images/coraline_2.jpg" alt="coraline" title="3-5 featured">
+				<figcaption><span class="gradetitle">3-5 Featured</span> Sony Pictures partnered with us to develop these story-starters inspired by the movie Coraline.</figcaption>
+			</figure>
 
-	<figure class="features">
-		<img class="images" src="images/environment_2.jpg" alt="environment" title="9-12 featured">
-		<figcaption><span class="gradetitle"> 9-12 Featured</span> The Lexus Eco Challenge asks high schoolers to develop a plan to help protect their environment.</figcaption>
-	</figure>
-</section>
+			<figure class="features">
+				<img class="images" src="images/graph_2.jpg" alt="graph" title="6-8 featured">
+				<figcaption><span class="gradetitle">6-8 Featured</span> We worked with The Actuarial Foundation to develop an interactive graphing math activity.</figcaption>
+					<!-- fixed box height to fix text, why is there margins between figures-->
+			</figure>
 
-<footer>
-	<p id="email"> <a href="mailto:batsheva.lam@gmail.com">Contact me.</a></p>
-</footer>
+			<figure class="features">
+				<img class="images" src="images/environment_2.jpg" alt="environment" title="9-12 featured">
+				<figcaption><span class="gradetitle"> 9-12 Featured</span> The Lexus Eco Challenge asks high schoolers to develop a plan to help protect their environment.</figcaption>
+			</figure>
+		</div>
+		
+	</section>
+
+	<footer>
+		<p id="email"> <a href="mailto:batsheva.lam@gmail.com">Contact me.</a></p>
+	</footer>
 
 </body>
-
-</div>
-
 
 </html>
