--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -13,9 +13,12 @@
 
 	<header class="clearfix">
 
-		<h1>Teacher<br>Corner</span></h1>
+
+		<h1>Teacher<br><span id="corner">Corner</span></h1>
+		
 		
 			<nav id="grade_nav">
+				<a href="#" id="menu">&#8803;</a>
 				<a href="#">K-2</a>
 				<a href="#">3-5</a>
 				<a href="#">6-8</a>
@@ -24,8 +27,8 @@
 			</nav>
 
 			<nav id="subject_nav">
-				<a href="#">teacher sweeps</a>
-				<a href="#">student contests</a>
+				<a href="#"><!-- teacher  -->sweeps</a>
+				<a href="#"><!-- student  -->contests</a>
 				<a href="#">english</a>
 				<a href="#">math</a>
 				<a href="#">social studies</a>
@@ -37,6 +40,7 @@
 	<section id="two_column" class="clearfix">
 
 		<main id="left">
+
 			<p id="slogan"> Free content for K-12 teachers.</p>
 			<p id="description">We partner with non-profits, corporations and government agencies to develop unique and valuable free content for teachers to use in their classrooms.</p>
 			<p id="list">Send me an email when a new program is is developed.</p>
@@ -44,24 +48,29 @@
 
 
 		<aside id="right">
+	
 			<figure>
+				<div class="circle">K-2</div>
 				<img src="images/apple_2.jpg" alt="apple" title="k-2 featured">
-				<figcaption><span class="gradetitle">K-2 Featured</span> The Apple Foundation partnered with us to help you teach key math concepts using apples.</figcaption>
+				<figcaption><span class="gradetitle">K-2 Featured</span> Teach math concepts with apples, brought to you by The Apple Foundation.</figcaption>
 			</figure>
 			
 			<figure>
+				<div class="circle" id="secondcircle">3-5</div>
 				<img src="images/coraline_2.jpg" alt="coraline" title="3-5 featured">
 				<figcaption><span class="gradetitle">3-5 Featured</span> Sony Pictures partnered with us to develop these story-starters inspired by Coraline.</figcaption>
 			</figure>
 			
 			<figure>
-				<figcaption><span class="gradetitle">6-8 Featured</span> We worked with The Actuarial Foundation to develop a graphing math activity.</figcaption>
+				<div class="circle">6-8</div>
 				<img src="images/graph_2.jpg" alt="graph" title="6-8 featured">
+				<figcaption><span class="gradetitle">6-8 Featured</span> We worked with The Actuarial Foundation to develop a graphing math activity.</figcaption>
 			</figure>
 
 			<figure>
-				<figcaption><span class="gradetitle"> 9-12 Featured</span> Lexus Eco Challenge asks students to develop a plan to protect their environment.</figcaption>
+				<div class="circle">9-12</div>
 				<img src="images/environment_2.jpg" alt="environment" title="9-12 featured">
+				<figcaption><span class="gradetitle"> 9-12 Featured</span> Lexus Eco Challenge asks students to develop a plan to protect their environment.</figcaption>
 			</figure>
 		</aside>
 		
