--- a/unit_9/index.html
+++ b/unit_9/index.html
@@ -20,13 +20,15 @@
 
 <body>
 
-	<header class="clearfix">
-
 
 		<h1><img src="images/teachercorner.png" alt="teacher corner" title="teacher corner"></h1>
 
+	<header class="clearfix">
+
 		<label id="label_nav" for="toggle">&#8803;</label>
     	<input type="checkbox" id="toggle">
+
+    	<section>
 		
 			<nav id="grade_nav">
 				<a href="#k_2section">K-2</a>
@@ -37,13 +39,14 @@
 			</nav>
 
 			<nav id="subject_nav">
-				<a href="#"><!-- teacher  -->sweeps & contests</a>
-				<!-- <a href="#">student contests</a> -->
+				<a href="#">sweeps & contests</a>
 				<a href="#">english</a>
 				<a href="#">math</a>
 				<a href="#">social studies</a>
 				<a href="#">science</a>
 			</nav>
+
+		</section>
 		
 	</header>
 
@@ -80,31 +83,34 @@
 			</figure>
 			
 			<figure>
-				<div class="circle" id="secondcircle"><span>3-5</span></div>
+				<div class="circle" id="secondcircle"><span><a href="#3_5section">3-5</a></span></div>
 				<img src="images/pan_35.jpg" alt="pan" title="3-5 featured">
 				<figcaption><span class="gradetitle"><a href="http://www.scholastic.com/pan/" target="_blank">3-5 Featured</span></a> Reinforce key reading strategies with lessons inspired by the movie Pan.</figcaption>
 			</figure>
 			
 			<figure>
-				<div class="circle" id="thirdcircle"><span>6-8</span></div>
+				<div class="circle" id="thirdcircle"><span><a href="#6_8section">6-8</a></span></div>
 				<img src="images/cncs_68.jpg" alt="cncs" title="6-8 featured">
 				<figcaption><span class="gradetitle"><a href="http://www.scholastic.com/mlkday/" target="_blank">6-8 Featured</span></a> Teach your students about Dr. Martin Luther King, Jr. and inspire them to “lead in deed.”</figcaption>
 			</figure>
 
 			<figure>
-				<div class="circle" id="fourthcircle"><span>9-12</span></div>
+				<div class="circle" id="fourthcircle"><span><a href="#9_12section">9-12</a></span></div>
 				<img src="images/lexus_912.jpg" alt="lexus" title="9-12 featured">
 				<figcaption><span class="gradetitle"><a href="http://lexus.scholastic.com" target="_blank"> 9-12 Featured</span></a> Encourage your class to research an environmental issue and enter the Lexus Eco Challenge.</figcaption>
 			</figure>
 		</aside>
 
+		<a name="k_2section"></a>
+
 		</section>
+
+		<div id="bottom">
+
 
 		<article class="clearfix">
 
 			<div class="arrow"> &#8595;</div>
-
-			<a name="k_2section"></a>
 			
 			<figure class="small">
 				<div class="circle"><span>K-2</span></div>
@@ -135,17 +141,92 @@
 				<figcaption><a href="http://www.scholastic.com/mlkday" target="_blank">scholastic.com/mlkday</a></figcaption>
 			</figure>
 
+				<a name="3_5section"></a>
+
 		</article>
 
 		<article class="clearfix">
 
 			<div class="arrow"> &#8595;</div>
-
-			<a name="3_5section"></a>
 			
 			<figure class="small">
 				<div class="circle"><span>3-5</span></div>
-				<img src="images/first5_k2.jpg" alt="first5" title="k-2">
+				<img src="images/pan_35.jpg" alt="pan" title="pan">
+				<figcaption class="small_title">Literacy Lessons</figcaption>
+				<figcaption class="small_description"> Teach literacy at a young age through music, and interactive materials.</figcaption>
+				<figcaption><a href="http://www.scholastic.com/first5ca" target="_blank">scholastic.com/first5ca</a></figcaption>
+			</figure>
+
+			<figure class="small">
+				<img src="images/DHIFI_35.jpg" alt="DHIFI" title="k-2">
+				<figcaption><span class="small_title">Writing Contest</span></figcaption>
+				<figcaption class="small_description"> Encourage students to write about what makes them great and enter the contest.</figcaption>
+				<figcaption><a href="http://www.scholastic.com/flauntit" target="_blank">scholastic.com/flauntit</a></figcaption>
+			</figure>
+
+			<figure class="small">
+				<img src="images/actuarial_68.jpg" alt="actuarial" title="6-8">
+				<figcaption><span class="small_title">The Number System</span></figcaption>
+				<figcaption class="small_description"> Support your students in grasping crucial foundational number concepts.</figcaption>
+				<figcaption><a href="http://www.scholastic.com/ithots" target="_blank">scholastic.com/ithots</a></figcaption>
+			</figure>
+
+			<figure class="small">
+				<img src="images/CNCS_35.jpg" alt="cncs" title="k-2">
+				<figcaption><span class="small_title">MLK Jr. Day</span></figcaption>
+				<figcaption class="small_description"> Teach your students about Dr. Martin Luther King Jr. and inspire them to "lead in deed."</figcaption>
+				<figcaption><a href="http://www.scholastic.com/mlkday" target="_blank">scholastic.com/mlkday</a></figcaption>
+			</figure>
+
+			<a name="6_8section"></a>
+
+		</article>
+
+		
+		<article class="clearfix">
+
+			<div class="arrow"> &#8595;</div>
+			
+			<figure class="small">
+				<div class="circle"><span>6-8</span></div>
+				<img src="images/pan_35.jpg" alt="pan" title="pan">
+				<figcaption class="small_title">Literacy Lessons</figcaption>
+				<figcaption class="small_description"> Teach literacy at a young age through music, and interactive materials.</figcaption>
+				<figcaption><a href="http://www.scholastic.com/first5ca" target="_blank">scholastic.com/first5ca</a></figcaption>
+			</figure>
+
+			<figure class="small">
+				<img src="images/DHIFI_35.jpg" alt="DHIFI" title="k-2">
+				<figcaption><span class="small_title">Writing Contest</span></figcaption>
+				<figcaption class="small_description"> Encourage students to write about what makes them great and enter the contest.</figcaption>
+				<figcaption><a href="http://www.scholastic.com/flauntit" target="_blank">scholastic.com/flauntit</a></figcaption>
+			</figure>
+
+			<figure class="small">
+				<img src="images/actuarial_68.jpg" alt="actuarial" title="6-8">
+				<figcaption><span class="small_title">The Number System</span></figcaption>
+				<figcaption class="small_description"> Support your students in grasping crucial foundational number concepts.</figcaption>
+				<figcaption><a href="http://www.scholastic.com/ithots" target="_blank">scholastic.com/ithots</a></figcaption>
+			</figure>
+
+			<figure class="small">
+				<img src="images/CNCS_35.jpg" alt="cncs" title="k-2">
+				<figcaption><span class="small_title">MLK Jr. Day</span></figcaption>
+				<figcaption class="small_description"> Teach your students about Dr. Martin Luther King Jr. and inspire them to "lead in deed."</figcaption>
+				<figcaption><a href="http://www.scholastic.com/mlkday" target="_blank">scholastic.com/mlkday</a></figcaption>
+			</figure>
+
+			<a name="9_12section"></a>
+
+		</article>
+
+		<article class="clearfix">
+
+			<div class="arrow"> &#8595;</div>
+			
+			<figure class="small">
+				<div class="circle"><span>9-12</span></div>
+				<img src="images/pan_35.jpg" alt="pan" title="pan">
 				<figcaption class="small_title">Literacy Lessons</figcaption>
 				<figcaption class="small_description"> Teach literacy at a young age through music, and interactive materials.</figcaption>
 				<figcaption><a href="http://www.scholastic.com/first5ca" target="_blank">scholastic.com/first5ca</a></figcaption>
@@ -173,6 +254,8 @@
 			</figure>
 
 		</article>
+
+	</div>
 
 
 
