--- a/unit_9/index.html
+++ b/unit_9/index.html
@@ -35,7 +35,7 @@
 				<a href="#3_5section">3-5</a>
 				<a href="#6_8section">6-8</a>
 				<a href="#9_12section">9-12</a>
-				<a href="#k_12section">K-12</a>
+				<!-- <a href="#k_12section">K-12</a> -->
 			</nav>
 
 			<nav id="subject_nav">
@@ -53,6 +53,8 @@
 	<section id="two_column" class="clearfix">
 
 		<main id="left">
+
+			<!-- <h1><img src="images/teachercorner.png" alt="teacher corner" title="teacher corner"></h1> -->
 
 			<p id="slogan"> Free content for K-12 teachers.</p>
 			
@@ -79,7 +81,7 @@
 			<figure>
 				<div class="circle"><span><a href="#k_2section">K-2</a></span></div>
 				<img src="images/first5_k2.jpg" alt="first5" title="k-2 featured">
-				<figcaption><span class="gradetitle"><a href="http://www.scholastic.com/first5ca/" target="_blank">K-2 Featured</span></a> Aid in healthy brain development by modeling speech and language.</figcaption>
+				<figcaption><span class="gradetitle"><a href="http://www.scholastic.com/first5ca/" target="_blank">K-2 Featured</span></a> Aid in healthy brain development by modeling language.</figcaption>
 			</figure>
 			
 			<figure>
@@ -91,7 +93,7 @@
 			<figure>
 				<div class="circle" id="thirdcircle"><span><a href="#6_8section">6-8</a></span></div>
 				<img src="images/cncs_68.jpg" alt="cncs" title="6-8 featured">
-				<figcaption><span class="gradetitle"><a href="http://www.scholastic.com/mlkday/" target="_blank">6-8 Featured</span></a> Teach your students about Dr. Martin Luther King, Jr. and inspire them to “lead in deed.”</figcaption>
+				<figcaption><span class="gradetitle"><a href="http://www.scholastic.com/mlkday/" target="_blank">6-8 Featured</span></a> Teach your students about Dr. Martin Luther King, Jr. and inspire them to “lead in deed."</figcaption>
 			</figure>
 
 			<figure>
@@ -150,11 +152,11 @@
 			<div class="arrow"> &#8595;</div>
 			
 			<figure class="small">
-				<div class="circle"><span>3-5</span></div>
+				<div class="circle" id="secondcircle"><span>3-5</span></div>
 				<img src="images/pan_35.jpg" alt="pan" title="pan">
-				<figcaption class="small_title">Literacy Lessons</figcaption>
-				<figcaption class="small_description"> Teach literacy at a young age through music, and interactive materials.</figcaption>
-				<figcaption><a href="http://www.scholastic.com/first5ca" target="_blank">scholastic.com/first5ca</a></figcaption>
+				<figcaption class="small_title">Reading Strategies</figcaption>
+				<figcaption class="small_description"> Reinforce key reading strategies with lessons inspired by the movie Pan.</figcaption>
+				<figcaption><a href="http://www.scholastic.com/pan" target="_blank">scholastic.com/pan</a></figcaption>
 			</figure>
 
 			<figure class="small">
@@ -188,11 +190,11 @@
 			<div class="arrow"> &#8595;</div>
 			
 			<figure class="small">
-				<div class="circle"><span>6-8</span></div>
-				<img src="images/pan_35.jpg" alt="pan" title="pan">
-				<figcaption class="small_title">Literacy Lessons</figcaption>
-				<figcaption class="small_description"> Teach literacy at a young age through music, and interactive materials.</figcaption>
-				<figcaption><a href="http://www.scholastic.com/first5ca" target="_blank">scholastic.com/first5ca</a></figcaption>
+				<div class="circle" id="thirdcircle"><span>6-8</span></div>
+				<img src="images/cncs_68.jpg" alt="pan" title="pan">
+				<figcaption class="small_title">MLK Jr. Day</figcaption>
+				<figcaption class="small_description"> Teach your students about MLK Jr. and inspire them to “lead in deed."</figcaption>
+				<figcaption><a href="http://www.scholastic.com/mlkday" target="_blank">scholastic.com/mlkday</a></figcaption>
 			</figure>
 
 			<figure class="small">
@@ -212,7 +214,7 @@
 			<figure class="small">
 				<img src="images/CNCS_35.jpg" alt="cncs" title="k-2">
 				<figcaption><span class="small_title">MLK Jr. Day</span></figcaption>
-				<figcaption class="small_description"> Teach your students about Dr. Martin Luther King Jr. and inspire them to "lead in deed."</figcaption>
+				<figcaption class="small_description"> Teach your students about MLK Jr. and inspire them to "lead in deed."</figcaption>
 				<figcaption><a href="http://www.scholastic.com/mlkday" target="_blank">scholastic.com/mlkday</a></figcaption>
 			</figure>
 
@@ -225,11 +227,11 @@
 			<div class="arrow"> &#8595;</div>
 			
 			<figure class="small">
-				<div class="circle"><span>9-12</span></div>
-				<img src="images/pan_35.jpg" alt="pan" title="pan">
-				<figcaption class="small_title">Literacy Lessons</figcaption>
-				<figcaption class="small_description"> Teach literacy at a young age through music, and interactive materials.</figcaption>
-				<figcaption><a href="http://www.scholastic.com/first5ca" target="_blank">scholastic.com/first5ca</a></figcaption>
+				<div class="circle" id="fourthcircle"><span>9-12</span></div>
+				<img src="images/lexus_912.jpg" alt="pan" title="pan">
+				<figcaption class="small_title">Eco Challenge</figcaption>
+				<figcaption class="small_description"> Students research an environmental issue and enter the Lexus Eco Challenge.</figcaption>
+				<figcaption><a href="http://www.scholastic.com/lexus" target="_blank">scholastic.com/lexus</a></figcaption>
 			</figure>
 
 			<figure class="small">
@@ -263,7 +265,7 @@
 	</section>
 
 	<footer>
-		<p> © 2015 Scholastic National Partnerships. All Rights Reserved. <a href="mailto:batsheva.lam@gmail.com">Contact us.</a></p>
+		<p> © 2015-2016 Scholastic National Partnerships. All Rights Reserved. <a href="mailto:batsheva.lam@gmail.com">Contact us.</a></p>
 	</footer>
 
 </body>
