--- a/unit_9/index.html
+++ b/unit_9/index.html
@@ -103,7 +103,7 @@
 			</figure>
 		</aside>
 
-		<a name="k_2section"></a>
+		<a id="k_2section" class="anchor"></a>
 
 		</section>
 
@@ -143,7 +143,7 @@
 				<figcaption><a href="http://www.scholastic.com/mlkday" target="_blank">scholastic.com/mlkday</a></figcaption>
 			</figure>
 
-				<a name="3_5section"></a>
+				<a id="3_5section" class="anchor"></a>
 
 		</article>
 
@@ -180,7 +180,7 @@
 				<figcaption><a href="http://www.scholastic.com/mlkday" target="_blank">scholastic.com/mlkday</a></figcaption>
 			</figure>
 
-			<a name="6_8section"></a>
+			<a id="6_8section" class="anchor"></a>
 
 		</article>
 
@@ -218,7 +218,7 @@
 				<figcaption><a href="http://www.scholastic.com/mlkday" target="_blank">scholastic.com/mlkday</a></figcaption>
 			</figure>
 
-			<a name="9_12section"></a>
+			<a id="9_12section" class="anchor"></a>
 
 		</article>
 
